# fmath

./: CMakeLists.txt  Pipfile  README.md  abs.h  abs_bench.h  abs_test.cc  bencher.cc  bits.h  bits_test.cc  cast.h  cast_test.cc  concept.h  div.h  div_bench.h  div_test.cc  exp.h  exp_bench.h  exp_test.cc  floats.h  floats.pxd  floats_test.cc  fmath.c  fmath.cpp  fmath.pyx  lib.cc  lib.h  lib.pxd  lib_test.cc  log.h  log_bench.h  log_test.cc  magic.h  max.h  max_bench.h  max_test.cc  min.h  min_bench.h  min_test.cc  numeric.h  numeric_test.cc  (+17 more)
